--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "cross-env": "^5.0.1",
-    "express": "^4.15.3",
-    "nuxt": "^1.0.0-rc3",
-    "nuxt-oauth": "^0.0.2",
-    "source-map-support": "^0.4.15",
-    "vuetify": "latest",
+    "axios": "^0.19.0",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "cross-env": "^5.0.1",
+    "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "nuxt": "^1.0.0-rc3",
+    "nuxt-oauth": "^0.0.2",
     "passport": "^0.3.2",
-    "passport-strava": "latest"
+    "passport-strava": "latest",
+    "source-map-support": "^0.4.15",
+    "vuetify": "latest"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
